--- a/Frontend/public/home_page - Originale.html
+++ b/Frontend/public/home_page - Originale.html
@@ -10,13 +10,319 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/titanium.css">
 
-    <!-- 
     <style>
-        /* CSS INTERNO DISATTIVATO - ORA USIAMO TITANIUM.CSS PER MASSIMA PULIZIA */
+        /* CSS STANDARD PURO E ROBUSTO (Stile Titanium) */
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+        /* HIDE SCROLLBARS GLOBALLY */
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        * {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+
+        :root {
+            --bg-light: #e2e8f0;
+            --bg-dark: #0a0f1e;
+            --text-light: #0f172a;
+            --text-dark: #ffffff;
+        }
+
+        body {
+            font-family: 'Manrope', sans-serif;
+            margin: 0;
+            transition: background-color 0.3s, color 0.3s;
+            background-color: var(--bg-light);
+            color: var(--text-light);
+        }
+
+        html.dark body {
+            background-color: var(--bg-dark);
+            color: var(--text-dark);
+        }
+
+        .titanium-box {
+            position: relative;
+            display: flex;
+            min-height: 100vh;
+            width: 100%;
+            max-width: 48rem;
+            flex-direction: column;
+            margin: 0 auto;
+            overflow: hidden;
+            transition: background 0.5s;
+            background: linear-gradient(to bottom right, #ffffff, #bfdbfe);
+            box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+        }
+
+        html.dark .titanium-box {
+            background: linear-gradient(to left, #030712, #162e6e);
+        }
+
+        .glass-glow {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: 150%;
+            height: 120%;
+            filter: blur(80px);
+            z-index: 0;
+            pointer-events: none;
+            animation: glowFloat 5s ease-in-out infinite;
+            transform: translateX(-50%);
+            background: radial-gradient(ellipse at 50% 0%, rgba(14, 165, 233, 0.45) 0%, rgba(14, 165, 233, 0.1) 50%, transparent 70%);
+        }
+
+        html.dark .glass-glow {
+            background: radial-gradient(ellipse at 50% 0%, rgba(80, 150, 255, 0.6) 0%, rgba(80, 150, 255, 0.2) 25%, rgba(80, 150, 255, 0.05) 50%, transparent 75%);
+        }
+
+        /* HEADER & FOOTER */
+        .titanium-header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            max-width: 48rem;
+            z-index: 50;
+            padding: 1rem;
+            backdrop-filter: blur(12px);
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), transparent);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        html.dark .titanium-header {
+            background: linear-gradient(to bottom, rgba(10, 15, 30, 0.9), transparent);
+        }
+
+        .titanium-footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            max-width: 48rem;
+            z-index: 50;
+            padding: 1rem;
+            backdrop-filter: blur(12px);
+            background: linear-gradient(to top, rgba(255, 255, 255, 0.9), transparent);
+            display: flex;
+            justify-content: center;
+        }
+
+        html.dark .titanium-footer {
+            background: linear-gradient(to top, rgba(10, 15, 30, 0.9), transparent);
+        }
+
+        /* COMPONENTS */
+        .btn-matrix {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            padding: 1rem;
+            border-radius: 24px;
+            overflow: hidden;
+            transition: all 0.3s;
+            color: white;
+            cursor: pointer !important;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+            border: none;
+            width: 100%;
+        }
+
+        .btn-blue {
+            background: linear-gradient(to right, #60a5fa, #3b82f6);
+        }
+
+        html.dark .btn-blue {
+            background: linear-gradient(to right, #2196F3, #1976D2);
+        }
+
+        .btn-blue:hover {
+            transform: translateY(-4px);
+        }
+
+        .btn-green {
+            background: linear-gradient(to right, #4ade80, #22c55e);
+        }
+
+        html.dark .btn-green {
+            background: linear-gradient(to right, #00C853, #2E7D32);
+        }
+
+        .btn-green:hover {
+            transform: translateY(-4px);
+        }
+
+        .btn-orange {
+            background: linear-gradient(to right, #fb923c, #f97316);
+            cursor: default;
+        }
+
+        html.dark .btn-orange {
+            background: linear-gradient(to right, #FF9800, #E65100);
+        }
+
+        .btn-red {
+            background: linear-gradient(to right, #f87171, #dc2626);
+            cursor: default;
+        }
+
+        html.dark .btn-red {
+            background: linear-gradient(to right, #450a0a, #1e0707);
+        }
+
+        /* Disable hover lift specifically for these boxes */
+        .no-lift:hover {
+            transform: none !important;
+        }
+
+        /* INNER LISTS GLASS */
+        .glass-inner-list .list-item {
+            background: rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        html.dark .glass-inner-list .list-item {
+            background: rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .list-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0.75rem;
+            border-radius: 12px;
+            margin-bottom: 0.5rem;
+            transition: all 0.2s;
+        }
+
+        /* TITANIUM INTERACTIVE (#6) */
+        .titanium-interactive {
+            transition: all 0.3s;
+            cursor: pointer;
+        }
+
+        .titanium-interactive:hover {
+            transform: translateY(-4px) !important;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+            z-index: 100;
+            position: relative;
+        }
+
+        .titanium-interactive:active {
+            transform: scale(0.98);
+        }
+
+        /* LAYOUT */
+        .grid-buttons {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+            width: 100%;
+            margin-bottom: 0px;
+        }
+
+        /* ANIMATION & UTILS */
+        @keyframes shimmer {
+            0% {
+                background-position: -200% 0;
+            }
+
+            100% {
+                background-position: 200% 0;
+            }
+        }
+
+        /* BORDER GLOW (#9) */
+        .border-glow {
+            position: relative;
+            border: 0 !important;
+        }
+
+        .border-glow::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            padding: 1.5px;
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            pointer-events: none;
+            z-index: 20;
+            background: linear-gradient(120deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.1) 40%, rgba(255, 255, 255, 0.6) 100%);
+        }
+
+        /* SAETTA MASTER (UNICA & INTENSA) */
+        .saetta-master {
+            position: absolute;
+            inset: 0;
+            /* Intensità Gold Aumentata (0.4 opacity) */
+            background: linear-gradient(110deg, transparent 40%, rgba(255, 255, 255, 0.4) 50%, transparent 60%);
+            background-size: 200% 100%;
+            pointer-events: none;
+            z-index: 40;
+            animation: shimmer 5s infinite linear;
+            mix-blend-mode: overlay;
+        }
+
+        .glass-shine {
+            background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), transparent);
+            opacity: 0;
+            transition: opacity 0.3s;
+            position: absolute;
+            inset: 0;
+            pointer-events: none;
+        }
+
+        .btn-matrix:hover .glass-shine {
+            opacity: 1;
+        }
+
+        /* ICONE ANIMATE */
+        .bg-icon-container {
+            position: absolute;
+            right: -10px;
+            bottom: -20px;
+            opacity: 0.2;
+            transform: scale(1.1) rotate(12deg);
+            transition: transform 0.5s ease-out, opacity 0.5s ease;
+            transform-origin: center center;
+            pointer-events: none;
+        }
+
+        .btn-matrix:hover .bg-icon-container {
+            transform: scale(1.3) rotate(20deg) translate(-5px, -5px);
+            opacity: 0.3;
+        }
+
+        .material-symbols-outlined {
+            font-family: 'Material Symbols Outlined';
+            font-size: 24px;
+            display: inline-block;
+        }
+
+        .avatar-circle {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #ccc;
+            background-size: cover;
+            background-position: center;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+        }
     </style>
-    -->
 </head>
 
 <body>
@@ -46,18 +352,19 @@
 
         <!-- MAIN -->
         <main
-            style="flex: 1; padding: 6rem 1rem; display: flex; flex-direction: column; gap: 1rem; position: relative;">
+            style="flex: 1; overflow-y: auto; padding: 6rem 1rem 6rem 1rem; display: flex; flex-direction: column; gap: 1rem; position: relative;">
 
             <!-- SAETTA MASTER: UNICO RIFLESSO INTENSO -->
             <div class="saetta-master"></div>
 
             <div class="grid-buttons">
                 <!-- ROW 1 -->
-                <a href="area_privata.html" class="matrix-blue border-glow" style="height: 160px;">
+                <a href="area_privata.html" class="btn-matrix btn-blue border-glow"
+                    style="height: 160px; text-decoration: none;">
                     <div class="glass-shine"></div>
-                    <div class="bg-icon-container">
-                        <span class="material-symbols-outlined" style="font-size: 100px; color: white;">lock</span>
-                    </div>
+                    <div class="bg-icon-container"><span class="material-symbols-outlined"
+                            style="font-size: 100px; color: white;">lock</span></div>
+
                     <div
                         style="z-index: 10; display: flex; flex-direction: column; align-items: flex-start; gap: 0rem;">
                         <h3
@@ -67,11 +374,12 @@
                     </div>
                 </a>
 
-                <a href="lista_aziende.html" class="matrix-green border-glow" style="height: 160px;">
+                <a href="lista_aziende.html" class="btn-matrix btn-green border-glow"
+                    style="height: 160px; text-decoration: none;">
                     <div class="glass-shine"></div>
-                    <div class="bg-icon-container">
-                        <span class="material-symbols-outlined" style="font-size: 100px; color: white;">apartment</span>
-                    </div>
+                    <div class="bg-icon-container"><span class="material-symbols-outlined"
+                            style="font-size: 100px; color: white;">apartment</span></div>
+
                     <div
                         style="z-index: 10; display: flex; flex-direction: column; align-items: flex-start; gap: 0rem;">
                         <h3
@@ -81,13 +389,13 @@
                     </div>
                 </a>
 
-                <!-- ROW 2: SCADENZE -->
-                <a href="scadenze.html" class="matrix-orange border-glow no-lift"
-                    style="grid-column: span 2; min-height: 100px; flex-direction: row; align-items: center;">
-                    <div class="bg-icon-container">
-                        <span class="material-symbols-outlined"
-                            style="font-size: 200px; color: white;">calendar_month</span>
-                    </div>
+                <!-- ROW 2: SCADENZE (Disabled Lift .no-lift) -->
+                <a href="scadenze.html" class="btn-matrix btn-orange border-glow no-lift"
+                    style="grid-column: span 2; min-height: 100px; flex-direction: row; align-items: center; text-decoration: none; cursor: pointer;">
+
+                    <div class="bg-icon-container"><span class="material-symbols-outlined"
+                            style="font-size: 200px; color: white;">calendar_month</span></div>
+
                     <div
                         style="z-index: 10; display: flex; flex-direction: column; align-items: flex-start; gap: 0.1rem; flex: 1;">
                         <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 2px;">
@@ -99,6 +407,7 @@
                             </span>
                         </div>
                         <p style="font-size: 0.75rem; font-weight: 500; opacity: 0.9;">Controlla i prossimi impegni</p>
+                        <!-- LISTA -->
                         <div id="deadline-list-container"
                             style="width: 100%; margin-top: 0.5rem; display: grid; grid-template-columns: 1fr; gap: 0.5rem;">
                         </div>
@@ -106,12 +415,13 @@
                 </a>
             </div>
 
-            <!-- 2. URGENZE -->
-            <div id="urgenze-card" class="matrix-red border-glow no-lift"
-                style="width: 100%; min-height: 160px; display: block; padding: 0.5rem;">
-                <div class="bg-icon-container" style="bottom: -30px; right: -10px;">
-                    <span class="material-symbols-outlined" style="font-size: 240px; color: white;">warning</span>
-                </div>
+            <!-- 2. URGENZE (Disabled Lift .no-lift) -->
+            <div id="urgenze-card" class="btn-matrix btn-red border-glow no-lift"
+                style="width: 100%; min-height: 160px; display: block; padding: 0.5rem; cursor: pointer;">
+
+                <div class="bg-icon-container" style="bottom: -30px; right: -10px;"><span
+                        class="material-symbols-outlined" style="font-size: 240px; color: white;">warning</span></div>
+
                 <div
                     style="display: flex; justify-content: space-between; align-items: center; padding: 1rem; border-bottom: 1px solid rgba(255,255,255,0.1); margin-bottom: 1rem; position: relative; z-index: 10;">
                     <div>
@@ -123,10 +433,12 @@
                         <span class="material-symbols-outlined" style="font-size: 18px; opacity: 0.6;">update</span>
                     </div>
                 </div>
+                <!-- LISTA URGENZE -->
                 <div id="urgenze-list"
                     style="position: relative; z-index: 10; padding: 0 0.5rem; display: flex; flex-direction: column; gap: 0.5rem; max-height: 300px; overflow-y: auto;"
                     class="no-scrollbar"></div>
             </div>
+
         </main>
 
         <footer class="titanium-footer" style="flex-direction: column; gap: 0.5rem; padding-bottom: 2rem;">
