--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -25,6 +25,11 @@
 
             <div class="saetta-master"></div>
 
+            <p
+                style="text-align: center; font-size: 0.8rem; font-weight: 800; margin-bottom: 2rem; opacity: 0.5; letter-spacing: 1px; text-transform: uppercase;">
+                Versione definitiva vista Home Page con tema Chiaro/Scuro
+            </p>
+
             <div class="grid-buttons">
                 <a href="area_privata.html" class="matrix-blue border-glow"
                     style="height: 150px; margin-left: 10px; width: calc(100% - 10px);">
@@ -56,7 +61,7 @@
                     style="grid-column: span 2; min-height: 100px; display: block; position: relative; cursor: pointer; margin-left: 10px; margin-right: 10px; width: calc(100% - 20px); padding: 0.5rem 0.5rem 0 0.5rem;">
 
                     <!-- Icona Sfondo (Absolute Right) -->
-                    <div class="bg-icon-container" style="bottom: -30px; right: -10px;">
+                    <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
                         <span class="material-symbols-outlined"
                             style="font-size: 200px; color: white;">calendar_month</span>
                     </div>
@@ -72,8 +77,7 @@
                                     <span id="urgent-count">0</span>
                                 </span>
                             </div>
-                            <p style="margin: 2px 0 0 0; font-size: 0.8rem; opacity: 0.7;">Controlla i prossimi impegni
-                            </p>
+                            <p>Controlla i prossimi impegni</p>
                         </div>
                         <div id="deadline-list-container"
                             style="width: 100%; display: flex; flex-direction: column; gap: 0.5rem;">
@@ -85,14 +89,19 @@
             <!-- CARD 3: URGENZE (WIDE COL) -->
             <div id="urgenze-card" class="matrix-red border-glow no-lift"
                 style="width: calc(100% - 20px); margin-left: 10px; margin-right: 10px; min-height: 160px; display: block; padding: 0.5rem;">
-                <div class="bg-icon-container" style="bottom: -30px; right: -10px;">
+                <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
                     <span class="material-symbols-outlined" style="font-size: 240px; color: white;">warning</span>
                 </div>
                 <div
                     style="display: flex; justify-content: space-between; align-items: center; padding: 1rem; border-bottom: 1px solid rgba(255,255,255,0.1); margin-bottom: 1rem; position: relative; z-index: 10;">
-                    <div>
-                        <h3>Urgenze</h3>
-                        <p>Pratiche scadute</p>
+                    <div style="flex: 1;">
+                        <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 2px;">
+                            <h3 style="margin: 0;">Urgenze</h3>
+                            <span id="expired-count-badge" class="urgent-badge" style="opacity: 0;">
+                                <span id="expired-count">0</span>
+                            </span>
+                        </div>
+                        <p style="margin: 0;">Pratiche scadute</p>
                     </div>
                     <div
                         style="width: 30px; height: 30px; border-radius: 50%; background: rgba(255,255,255,0.1); display: flex; align-items: center; justify-content: center;">
