UI: Fixed 2-line title clamp and updated version text to Versione 1

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -25,9 +25,8 @@
 
             <div class="saetta-master"></div>
 
-            <p
-                style="text-align: center; font-size: 0.8rem; font-weight: 800; margin-bottom: 2rem; opacity: 0.5; letter-spacing: 1px; text-transform: uppercase;">
-                Versione definitiva vista Home Page con tema Chiaro/Scuro
+            <p class="hero-notice">
+                Versione 1 - definitiva vista Home Page con tema Chiaro/Scuro
             </p>
 
             <div class="dashboard-grid">
