--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -26,7 +26,7 @@
             <div class="saetta-master"></div>
 
             <p class="hero-notice">
-                Versione 2 - definitiva vista Home Page con tema Chiaro/Scuro
+                Versione 2 - Versione con cellulare funzionante
             </p>
 
             <div class="dashboard-grid">
